--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -5,6 +5,7 @@ npm-debug.log*
 
 # Dependency directory
 node_modules
+.env
 
 # Optional npm cache directory
 .npm
@@ -13,3 +14,4 @@ node_modules
 .DS_Store
 .idea
 .vscode
+
